fixed spacing issue with flex gap

--- a/src/css/user-view/_trip.scss
+++ b/src/css/user-view/_trip.scss
@@ -4,25 +4,11 @@
 
 .card-container {
   @include flex-row;
+  flex-wrap: wrap;
   justify-content: space-around;
   overflow: visible;
-  flex-wrap: wrap;
   width: 90%;
-
-  .trip-card:nth-of-type(n + 4) {
-    margin-top: 20px;
-  }
-
-  @media screen and (max-width: 1333px) {
-    .trip-card:nth-of-type(n + 3) {
-      margin-top: 20px;
-    }
-  }
-  @media screen and (max-width: 888px) {
-    .trip-card:nth-of-type(n + 2) {
-      margin-top: 20px;
-    }
-  }
+  gap: 30px;
 }
 
 .trip-card {
